# Havtorn

./: .gitignore  .gitmodules
Havtorn/Source/: CMakeLists.txt  CMakeListsTemplate.txt  CreateFileInProject.py  CreateFiles.bat  FileCreationUtil.py  FileCreatorResources.py  FileCreatorUtil.py  FileTemplates - kopia.json  FileTemplates.json  GenerateCMakeList.py  Havtorn.sln  HavtornFolderUtil.py  HavtornMainFoldersUtility.py  ParseJson.py  TemplateCreatorUtil.py  ValidationUtils.py
Havtorn/Source/Core/: Color.cpp  Color.h  CommandLine.cpp  CommandLine.h  Core.h  CoreTypes.h  EngineTypes.h  FileSystem.cpp  FileSystem.h  GeneralUtilities.h  HavtornString.h
Havtorn/Source/Core/MathTypes/: EngineMath.cpp  EngineMath.h  MathUtilities.h  Matrix.h  Quaternion.h  Transform.cpp  Transform.h  Vector.h
Havtorn/Source/Editor/: EditorManager.cpp  EditorManager.h  EditorProcess.cpp  EditorResourceManager.cpp  EditorResourceManager.h  EditorWindow.h  EditorWindows.h  hvpch.h
Havtorn/Source/Editor/AuthoringTools/: MaterialTool.cpp  MaterialTool.h  ScriptTool.cpp  ScriptTool.h
Havtorn/Source/Editor/Systems/: EditorRenderSystem.cpp  EditorRenderSystem.h  PickingSystem.cpp
Havtorn/Source/Editor/Toggleables/: EditMenu.cpp  FileMenu.cpp  HelpMenu.cpp  ViewMenu.cpp  WindowMenu.cpp
Havtorn/Source/Editor/Utils/: ImGuiUtils.h
Havtorn/Source/Editor/Windows/: AssetBrowserWindow.cpp  AssetBrowserWindow.h  DockSpaceWindow.cpp  DockSpaceWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  OutputLogWindow.cpp  OutputLogWindow.h  SequencerWindow.cpp  SequencerWindow.h  SpriteAnimatorGraphNodeWindow.cpp  SpriteAnimatorGraphNodeWindow.h  ViewportWindow.cpp  ViewportWindow.h
Havtorn/Source/Engine/: Engine.cpp  Engine.h  Havtorn.h  Log.cpp  Log.h  ModelImporter.cpp  ModelImporter.h  Timer.h  cpp.hint  hvpch.h
Havtorn/Source/Engine/Application/: EngineProcess.cpp  EngineProcess.h  ImGuiCrossProjectSetup.h  ImGuiManager.cpp  ImGuiManager.h  WindowHandler.cpp  WindowHandler.h
Havtorn/Source/Engine/Assets/: Asset.h  AssetFileHeader.h  AssetReference.h  AssetRegistry.cpp  AssetRegistry.h  FileHeaderInclude.h  RuntimeAssetDeclarations.h  RuntimeAssetInclude.h  SequencerAsset.cpp  SequencerAsset.h  SourceAssetData.h
Havtorn/Source/Engine/Assets/FileHeaders/: InputAssetFileHeader.h  MaterialAssetFileHeader.h  SceneFileHeader.h  ScriptFileHeader.h  SequencerFileHeader.h  SkeletalAnimationFileHeader.h  SkeletalModelFileHeader.h  SpriteAnimationClipFileHeader.h  StaticModelFileHeader.h  TextureCubeFileHeader.h  TextureFileHeader.h
Havtorn/Source/Engine/Assets/RuntimeAssets/: GraphicsMaterialAsset.h  SkeletalAnimationAsset.h  SkeletalMeshAsset.h  SpriteAnimationClipAsset.h  StaticMeshAsset.h  TextureAsset.h  TextureCubeAsset.h
Havtorn/Source/Engine/Core/: BitSet.h  Color.cpp  Color.h  ColorList.h  Core.h  GeneralUtilities.h  HavtornString.h  ImGuiTypeUtil.cpp  ImGuiTypeUtil.h  RuntimeAssetDeclarations.h  Serializable.h  Utilities.cpp  Utilities.h
Havtorn/Source/Engine/Core/MathTypes/: EngineMath.cpp  EngineMath.h  HavtornMath.h  MathUtilities.h  Matrix.h  Quaternion.h  Transform.h  Vector.h
Havtorn/Source/Engine/Debug/: DebugDrawer.cpp  DebugDrawer.h  DebugShape.cpp  DebugShape.h  DebugShapeSystem.cpp  DebugShapeSystem.h  DebugSystem.cpp  DebugSystem.h  DebugUtilityShape.cpp  DebugUtilityShape.h  SDebugShape.h
Havtorn/Source/Engine/ECS/: Component.cpp  Component.h  ComponentAlgo.h  ComponentEditorContext.h  ComponentView.h  ECS.h  ECSInclude.h  Entity.cpp  Entity.h  GUIDManager.h
Havtorn/Source/Engine/ECS/ComponentEditorContexts/: CameraComponentEditorContext.cpp  CameraComponentEditorContext.h  (+41 more)
Havtorn/Source/Engine/Editor/: EditorManager.cpp
Havtorn/Source/Engine/FileSystem/: FileHeaderDeclarations.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h
Havtorn/Source/Engine/Graphics/: FullscreenTexture.h  FullscreenTextureFactory.cpp  FullscreenTextureFactory.h  GeometryPrimitives.h  GraphicsEnums.h  GraphicsMaterial.cpp  GraphicsMaterial.h  GraphicsStructs.h  GraphicsUtilities.cpp  GraphicsUtilities.h  LineShape.h  RenderCommand.h  RenderManager.cpp  RenderManager.h  RenderStateManager.cpp  RenderStateManager.h  RenderTextureFactory.cpp  TextureBank.cpp  TextureBank.h  VertexBufferPrimitivesUtility.h
Havtorn/Source/Engine/HexPhys/: HexPhys.cpp  HexPhys.h
Havtorn/Source/Engine/HexRune/: HexRune.cpp  HexRune.h  NodeEditorContext.h  Pin.cpp  Pin.h
Havtorn/Source/Engine/Input/: Input.cpp  Input.h  InputMapper.cpp  InputMapper.h  InputTypes.h
Havtorn/Source/Engine/Scene/: AssetRegistry.cpp  AssetRegistry.h  Scene.cpp  Scene.h  World.cpp  World.h
Havtorn/Source/Engine/SequencerKeyframes/: SequencerKeyframe.cpp  SequencerKeyframe.h  SequencerSpriteKeyframe.cpp  SequencerSpriteKeyframe.h  SequencerTransformKeyframe.cpp  SequencerTransformKeyframe.h
Havtorn/Source/Engine/Threading/: ThreadManager.cpp
Havtorn/Source/GUI/: GUI.cpp  GUI.h  GUIProcess.cpp  GUIProcess.h
Havtorn/Source/Game/: GameManager.cpp  GameManager.h  GameProcess.cpp  GameProcess.h  GameScene.cpp  GameScene.h  GameScript.cpp  NodeInclude.h  hvpch.h
Havtorn/Source/Game/Ghosty/: GhostyComponent.h  GhostyComponentEditorContext.cpp  GhostyComponentEditorContext.h  GhostyComponentView.cpp  GhostyComponentView.h  GhostySystem.cpp  GhostySystem.h
Havtorn/Source/Game/HexRune/: InterpolatePosition.cpp  SetPositionNode.cpp  SetPositionNode.h  TimerNode.cpp
Havtorn/Source/ImGui/Core/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
Havtorn/Source/ImGui/Havtorn/: Utilities.cpp  Utilities.h
Havtorn/Source/Launcher/: Main.cpp
Havtorn/Source/Launcher/Application/: Application.cpp  Application.h  Process.h
Havtorn/Source/Platform/: Platform.aps  Platform.rc  PlatformManager.cpp  PlatformManager.h  PlatformProcess.cpp  PlatformProcess.h  resource.h
(+183 files in other folders)
